# unicode_inspect

./: .gitignore  README.md  pyproject.toml
src/unicode_inspect/: __init__.py  cli.py  core.py
